--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,12 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+ - title: "Tags"
+ url: /tags/
+ - title: "Category"
+ url: /categories/
+ - title: "Search"
+ url: /search/
+ 
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
